--- a/设计模式/目录.md
+++ b/设计模式/目录.md
@@ -4,33 +4,83 @@
 
 ###一、七大设计原则
 
-
+- 单一职责原则
+- 开闭原则
+- 里氏替换原则
+- 依赖倒置原则
+- 接口隔离原则
+- 合成复用原则
+- 迪米特原则
 
 ### 二、23种设计模式
 
+[工厂方法模式][]
+
+[简单工厂模式][]
+
+[抽象工厂模式][]
+
+[模板方法模式][]
+
+[建造者模式][]
+
 [代理模式][]     
 
+[原型模式][]
+
+[中介者模式][]
+
+[命令模式][]
+
+[责任链模式][]
+
+[装饰模式][]
+
+[策略模式][]
+
+[适配器模式][]
+
+[迭代器模式][]
+
+[组合模式][]
+
+[观察者模式][]
+
+[门面模式][]
+
+[备忘录模式][]
+
+[访问者模式][]
+
+[状态模式][]
+
+[解释器模式][]
 
 
 
+[工厂方法模式]: 工厂方法模式.md	"工厂方法模式"
+[简单工厂模式]: 简单工厂模式.md	"简单工厂模式"
+[抽象工厂模式]: 抽象工厂模式.md	"抽象工厂模式"
+[模板方法模式]: 模板方法模式.md	"模板方法模式"
+[建造者模式    ]: 建造者模式.md	"建造者模式"
+[代理模式         ]:代理模式.md	"代理模式"
+[原型模式        ]:原型模式.md	"原型模式"
+[中介者模式]:中介者模式.md	"中介者模式"
+[命令模式]:命令模式.md	"命令模式"
+[责任链模式]:责任链模式.md	"责任链模式"
+[装饰模式]:装饰模式.md	"装饰模式"
+[策略模式]:策略模式.md	"策略模式"
+[适配器模式]:适配器模式.md	"适配器模式"
+[迭代器模式]:迭代器模式.md	"迭代器模式"
+[组合模式]:组合模式.md	"组合模式"
+[观察者模式]:观察者模式.md	"观察者模式"
+[门面模式]:门面模式.md	"门面模式"
+[备忘录模式]:备忘录模式.md	"备忘录模式"
+[访问者模式]:访问者模式.md	"访问者模式"
+[状态模式]:状态模式.md	"状态模式"
+[解释器模式]:解释器模式.md	"解释器模式"
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-[代理模式]:代理模式.md
 
 
 
