--- a/设计模式/组合模式.md
+++ b/设计模式/组合模式.md
@@ -2,4 +2,175 @@
 
 定义：将对象组合成树形结构以表示“部分-整体”的层次关系，使得客户对单个对象和组合对象的调用具有一致性。
 
-这是一个典型的树形结构。
+这是一个典型的树形结构。主要由树枝角色和树叶角色构成：
+
+- **Component抽象构件角色**
+
+定义参加组合对象的共有方法和属性，可以定义一些默认的行为和属性	。
+
+- **Leaf构件角色**
+
+叶子对象，其下再也没有其他的分支，是遍历的最小单位。
+
+- **Composite树枝构件**
+
+树枝对象，它的作用是组合树枝节点和叶子节点形成一个树形结构。
+
+通用框架：
+
+```java
+public abstract class Component {
+    /**
+     * 抽象构件，这里面定义个体和整体都具有的方法和属性
+     */
+    public void doSomething(){
+
+    }
+}
+```
+
+
+
+```java
+public class Composite extends Component {
+    private List<Component> subComponent = new ArrayList<>();
+    public void add(Component component){
+        this.subComponent.add(component);
+    }
+    public void remove(Component component){
+        this.subComponent.remove(component);
+    }
+    public List<Component> getChildren(){
+        return this.subComponent;
+    }
+}
+```
+
+
+
+```java
+public class Leaf extends Component {
+    /**
+     * 叶子节点，可以覆写父类方法
+     */
+    public void doSomething(){
+
+    }
+}
+```
+
+用例：
+
+```java
+public class Client {
+    public static void main(String[] args) {
+        /**
+         * 创建一个根节点
+         */
+        Composite root = new Composite();
+        root.doSomething();
+        /**
+         * 创建一个分支节点
+         */
+        Composite branch = new Composite();
+        /**
+         * 创建一个叶子节点
+         */
+        Leaf leaf = new Leaf();
+        /**
+         * 组合成树
+         */
+        branch.add(leaf);
+        root.add(branch);
+    }
+}
+
+```
+
+*注意事项：只要是树形结构，就要考虑使用组合模式，这个一定要记住，只要是要体现局部和整体的关系的时候，而且这种关系还可能比较深，考虑一下组合模式吧。*
+
+扩展：
+
+```java
+public abstract class Crop {
+    private String name;
+    private String postion;
+    private int salary;
+    /**
+     * 父节点是谁
+     */
+    private Crop parent;
+
+    public Crop(String name, String postion, int salary) {
+        this.name = name;
+        this.postion = postion;
+        this.salary = salary;
+    }
+
+    public Crop getParent() {
+        return parent;
+    }
+
+    protected void setParent(Crop parent) {
+        this.parent = parent;
+    }
+
+    public String getInfo(){
+        String info = "";
+        info = "姓名:" + this.name;
+        info += "\t职位："+this.postion;
+        info += "\t薪水：" + this.salary;
+        return info;
+    }
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getPostion() {
+        return postion;
+    }
+
+    public void setPostion(String postion) {
+        this.postion = postion;
+    }
+
+    public int getSalary() {
+        return salary;
+    }
+
+    public void setSalary(int salary) {
+        this.salary = salary;
+    }
+}
+```
+
+
+
+```java
+public class Branch extends Crop {
+    private List<Crop> childrenList = new ArrayList<>();
+    public Branch(String _name,String _position,int _salary){
+        super(_name,_position,_salary);
+    }
+    public List<Crop> getChildrenList(){
+        return this.childrenList;
+    }
+    public void add(Crop crop){
+        crop.setParent(this);
+        this.childrenList.add(crop);
+    }
+}
+```
+
+```java
+public class Leaf extends Crop{
+    public Leaf1(String name, String postion, int salary) {
+        super(name, postion, salary);
+    }
+}
+```
+
