修改代理模式笔记

--- a/设计模式/代理模式.md
+++ b/设计模式/代理模式.md
@@ -1,6 +1,6 @@
-
-
 #### 代理模式
+
+> 定义：为其他对象提供一种代理以控制对这个对象的访问。
 
 1. ##### 简单代理
 
@@ -134,7 +134,6 @@ public class IGamePlayer implements GamePlayer {
         }
     }
 }
-
 ```
 
 
