--- a/设计模式/单例模式.md
+++ b/设计模式/单例模式.md
@@ -2,4 +2,47 @@
 
 > 定义：确保某一个类只有一个实例，而且自行实例化并向整个系统提供这个实例。
 
-...
+```java
+public class Singleton {
+    private static Singleton ourInstance = new Singleton();
+
+    public static Singleton getInstance() {
+        return ourInstance;
+    }
+
+    private Singleton() {
+    }
+}
+```
+
+单例工厂：
+
+```java
+public class Singleton {
+    private Singleton(){
+
+    }
+    public void dosomething(){
+        System.out.print("do something");
+    }
+}
+```
+
+```java
+public class SingletonFactory {
+    private static Singleton singleton;
+    static {
+        try {
+            Constructor<? extends Singleton> declaredConstructor = 	Singleton.class.getDeclaredConstructor();
+            declaredConstructor.setAccessible(true);
+            singleton = declaredConstructor.newInstance();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+    public static Singleton getInstance() {
+        return singleton;
+    }
+}
+```
+
